# quick-query-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  claims-list.json  file-summary-table.md  file-summary.md
crates/qq-agents/: Cargo.toml  README.md
crates/qq-agents/src/: chat.rs  coder.rs  config.rs  explore.rs  lib.rs  planner.rs  preamble.rs  project_manager.rs  qa.rs  researcher.rs  reviewer.rs  summarizer.rs  writer.rs
crates/qq-cli/: Cargo.toml  README.md
crates/qq-cli/src/: chat.rs  compaction.rs  config.rs  debug_log.rs  event_bus.rs  execution_context.rs  main.rs  markdown.rs  profile_registry.rs  runner.rs  setup.rs
crates/qq-cli/src/agents/: agent_tool.rs  chat.rs  coder.rs  continuation.rs  explore.rs  inform_user.rs  mod.rs  planner.rs  researcher.rs  reviewer.rs  summarizer.rs  writer.rs
crates/qq-cli/src/interface/: mod.rs  readline.rs  tui.rs
crates/qq-cli/src/tui/: app.rs  events.rs  layout.rs  markdown.rs  mod.rs  scroll.rs  ui.rs
crates/qq-cli/src/tui/widgets/: content_area.rs  input_area.rs  mod.rs  status_bar.rs  thinking_panel.rs  tool_bar.rs
crates/qq-core/: Cargo.toml  README.md
crates/qq-core/src/: agent.rs  blocking.rs  chunker.rs  error.rs  lib.rs  message.rs  observation.rs  provider.rs  task.rs  testing.rs  tool.rs
crates/qq-mcp/: Cargo.toml
crates/qq-mcp/examples/: test_mcp_server.rs
crates/qq-mcp/src/: client.rs  error.rs  lib.rs  manager.rs  tool.rs
crates/qq-mcp/tests/: mcp_integration.rs  mcp_stdio.rs
crates/qq-mcp/tests/common/: test_server.rs
crates/qq-providers/: Cargo.toml  README.md
crates/qq-providers/src/: anthropic.rs  context_windows.rs  gemini.rs  lib.rs  openai.rs
crates/qq-tools/: Cargo.toml  README.md
crates/qq-tools/benches/: sandbox_overhead.rs
crates/qq-tools/src/: approval.rs  filesystem.rs  image.rs  lib.rs  memory.rs  process_data.rs  tasks.rs  web.rs
crates/qq-tools/src/bash/: internet_access.rs  mod.rs  mounts.rs  network_access.rs  parse.rs  permissions.rs  sandbox.rs  sensitive_access.rs
docs/: ARCHITECTURE.md  PRD.md  prompt-generalization-spec.md  prompt-generalization-update.md
docs/bugs/: bug-123.md
docs/research/: obs-mem-cc.md  obs-mem-qq.md
examples/: README.md  agents.toml  config.anthropic.toml  config.basic.toml  config.full.toml  config.gemini.toml  config.local-llm.toml  config.multi-provider.toml  config.openai-compatible.toml  config.profiles.toml
scripts/: setup-apparmor.sh
