[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew"]
license = "MIT"
repository = "https://github.com/andrew/quick-query-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP & networking
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "charset", "http2", "macos-system-configuration"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.9"
dirs = "6.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Terminal/readline
rustyline = "17.0"
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.13", default-features = false }
ratatui = "0.30"
tui-input = "0.15"
atty = "0.2"

# Internal crates
qq-core = { path = "crates/qq-core" }
qq-cli = { path = "crates/qq-cli" }
qq-agents = { path = "crates/qq-agents" }
qq-providers = { path = "crates/qq-providers" }
qq-tools = { path = "crates/qq-tools" }

[profile.release]
strip = true
lto = true
codegen-units = 1
