[package]
name = "qq-agents"
description = "Agent definitions and implementations for quick-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
qq-core = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
