[package]
name = "qq-cli"
description = "Quick-query command line interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "qq"
path = "src/main.rs"

[dependencies]
qq-core = { workspace = true }
qq-agents = { workspace = true }
qq-providers = { workspace = true }
qq-tools = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
rustyline = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { workspace = true }
tui-input = { workspace = true }
atty = { workspace = true }
reqwest = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1.11"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = { version = "3.10", optional = true }

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
static-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tempfile = "3.10"
