[package]
name = "qq-core"
description = "Core types and traits for quick-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
testing = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
infer = { workspace = true }
imagesize = { workspace = true }
