[package]
name = "qq-tools"
description = "Built-in tools for quick-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
qq-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# For filesystem tools
glob = "0.3"
regex = "1.11"

# For web tools
reqwest = { workspace = true }
scraper = "0.22"

# For memory tools
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.19"
